--- a/default.conf
+++ b/default.conf
@@ -6,18 +6,22 @@ server {
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
-        root   /code;
-        index  index.html index.htm;
+            root /code;
+            index index.php;
+            try_files $uri $uri/ /index.php?$query_string;
     }
 
 
     location ~ \.php$ {
         #because the working directory of php container is /code
         root /code;
+
+        fastcgi_index   index.php;
+        fastcgi_pass php:9000;
+        include    fastcgi_params;
         fastcgi_param REQUEST_METHOD $request_method;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        # forward request to php container
-        fastcgi_pass php:9000;
+        fastcgi_param   SCRIPT_NAME        $fastcgi_script_name;
     }
 
 
